--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -682,6 +682,13 @@ iframe{
     align-items: flex-start;
     list-style-type: none;
 }
+.img_contacto{
+    height: auto;
+    width: auto;
+}
+.iframe_{
+    width: 90%;
+}
 
 .aside_contacto{
     display: flex;
