--- a/scss/layout/_estilos_generales.scss
+++ b/scss/layout/_estilos_generales.scss
@@ -2,8 +2,8 @@
 [class *= "col"]{
     margin: 0;
     padding: 0;
-    /* border: 1px solid black;
-    background-color: red; */
+    // border: 1px solid black;
+    // background-color: red;
 }
 [class *= "row"]{
     margin: 0;
