V10 Cambio de formato de las imagenes a PNG y aplicacion de keywords

--- a/scss/layout/_estilos_generales.scss
+++ b/scss/layout/_estilos_generales.scss
@@ -36,6 +36,9 @@ el codigo que corresponde para que lo haga*/
 }
 
 @media only screen and (max-width:700px){
+    h1{
+        text-align: center;
+    }
     .btn_home{
         height: 30px;
         width: 30px;
