--- a/css/stylecss.css
+++ b/css/stylecss.css
@@ -30,6 +30,8 @@ el codigo que corresponde para que lo haga*/
     border-radius: 25px; }
 
 @media only screen and (max-width: 700px) {
+  h1 {
+    text-align: center; }
   .btn_home {
     height: 30px;
     width: 30px;
